--- a/WebApp/pom.xml
+++ b/WebApp/pom.xml
@@ -41,7 +41,7 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.web3j/core -->
+			<!-- https://mvnrepository.com/artifact/org.web3j/core -->
 
 		<dependency>
 			<groupId>org.web3j</groupId>
@@ -54,7 +54,22 @@
 			<version>4.9.3</version>
 		</dependency>
 
-    </dependencies>
+		<dependency>
+		<groupId>org.postgresql</groupId>
+		<artifactId>postgresql</artifactId>
+		<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+
+		<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
