--- a/WebApp/src/main/resources/application.properties
+++ b/WebApp/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+server.port=8081
+server.servlet.context-path=/api
+
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
