--- a/WebApp/pom.xml
+++ b/WebApp/pom.xml
@@ -69,6 +69,12 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.jetbrains.kotlinx</groupId>
+			<artifactId>kotlinx-coroutines-core</artifactId>
+			<version>1.6.2</version>
+			<type>pom</type>
+		</dependency>
 	</dependencies>
 
 	<build>
