--- a/Frontend/my-app/package.json
+++ b/Frontend/my-app/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "^4.0.3",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "universal-cookie": "^4.0.4",
     "url": "^0.11.0",
     "web-vitals": "^2.1.4"
   },
