--- a/WebApp/src/main/resources/application.properties
+++ b/WebApp/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8081
-server.servlet.context-path=/api
+server.servlet.context-path=
 
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
