--- a/WebApp/pom.xml
+++ b/WebApp/pom.xml
@@ -75,6 +75,19 @@
 			<version>1.6.2</version>
 			<type>pom</type>
 		</dependency>
+
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20220320</version>
+		</dependency>
 	</dependencies>
 
 	<build>
