--- a/WebApp/src/main/resources/application.properties
+++ b/WebApp/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+
+spring.thymeleaf.cache=false  
+spring.thymeleaf.suffix: .html
