--- a/Example App/ClientServer/src/main/resources/application.properties
+++ b/Example App/ClientServer/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.mvc.dispatch-options-request=true
