--- a/Api/WebApp/src/main/resources/application.properties
+++ b/Api/WebApp/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8081
-server.servlet.context-path=
+
 
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
@@ -13,3 +13,5 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.thymeleaf.cache=false  
 spring.thymeleaf.suffix: .html
+
+spring.mvc.dispatch-options-request=true
