--- a/Example App/Frontend/my-app/package.json
+++ b/Example App/Frontend/my-app/package.json
@@ -10,6 +10,7 @@
     "@web3auth/web3auth": "^1.1.0",
     "assert": "^2.0.0",
     "axios": "^0.27.2",
+    "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
     "ethers": "^5.6.9",
     "https-browserify": "^1.0.0",
